--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,20 +1,20 @@
 <header class="header">
   <div class="container header__container">
-    <a href="/" class="logo">
+    <a href="./#hero" class="logo">
       <span class="logo__icon"></span>
       <span class="logo__text">Intell-Corex</span>
     </a>
 
     <nav class="nav">
       <ul class="nav__list">
-        <li><a href="#hero" class="nav__link">Главная</a></li>
-        <li><a href="#features" class="nav__link">Технологии</a></li>
-        <li><a href="#solutions" class="nav__link">Решения</a></li>
-        <li><a href="#blog" class="nav__link">Блог</a></li>
+        <li><a href="./#hero" class="nav__link">Главная</a></li>
+        <li><a href="./#features" class="nav__link">Технологии</a></li>
+        <li><a href="./#solutions" class="nav__link">Решения</a></li>
+        <li><a href="./#blog" class="nav__link">Блог</a></li>
       </ul>
     </nav>
 
-    <a href="#contact" class="btn btn--primary header__btn">
+    <a href="./#contact" class="btn btn--primary header__btn">
       <span>Связаться</span>
       <i data-lucide="arrow-up-right"></i>
     </a>
