--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -227,7 +227,7 @@
                             <a href="#contact" class="btn-link">Узнать детали <i data-lucide="chevron-right"></i></a>
                         </div>
                         <div class="tab-image">
-                            <img src="img/placeholder.png" alt="Simple Bots">
+                            <img src="/img/two.jpg" alt="Simple Bots">
                         </div>
                     </div>
                 </div>
@@ -240,7 +240,7 @@
                             <a href="#contact" class="btn-link">Запросить доступ <i data-lucide="chevron-right"></i></a>
                         </div>
                         <div class="tab-image">
-                            <img src="img/placeholder.png" alt="Business Bots">
+                            <img src="/img/three.jpg" alt="Business Bots">
                         </div>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                                     data-lucide="chevron-right"></i></a>
                         </div>
                         <div class="tab-image">
-                            <img src="img/placeholder.png" alt="AI Assistants">
+                            <img src="/img/four.jpg" alt="AI Assistants">
                         </div>
                     </div>
                 </div>
