--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer__grid">
       <div class="footer__col footer__col--info">
-        <a href="/" class="logo footer__logo">
+        <a href="./#hero" class="logo footer__logo">
           <span class="logo__icon"></span>
           <span class="logo__text">Intell-Corex</span>
         </a>
@@ -15,22 +15,22 @@
       <div class="footer__col">
         <h4 class="footer__title">Навигация</h4>
         <ul class="footer__links">
-          <li><a href="#hero">Главная</a></li>
-          <li><a href="#features">Технологии</a></li>
-          <li><a href="#solutions">Решения</a></li>
-          <li><a href="#blog">Блог</a></li>
+          <li><a href="./#hero">Главная</a></li>
+          <li><a href="./#features">Технологии</a></li>
+          <li><a href="./#solutions">Решения</a></li>
+          <li><a href="./#blog">Блог</a></li>
         </ul>
       </div>
 
       <div class="footer__col">
         <h4 class="footer__title">Юридическая информация</h4>
         <ul class="footer__links">
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="cookies.html">Cookie Policy</a></li>
-          <li><a href="terms.html">Terms of Service</a></li>
-          <li><a href="return.html">Return Policy</a></li>
-          <li><a href="disclaimer.html">Disclaimer</a></li>
-          <li><a href="personal-data-policy.html">Data Policy</a></li>
+          <li><a href="./privacy.html">Privacy Policy</a></li>
+          <li><a href="./cookies.html">Cookie Policy</a></li>
+          <li><a href="./terms.html">Terms of Service</a></li>
+          <li><a href="./return.html">Return Policy</a></li>
+          <li><a href="./disclaimer.html">Disclaimer</a></li>
+          <li><a href="./personal-data-policy.html">Data Policy</a></li>
         </ul>
       </div>
 
